--- a/XiangJiang.Windows.Abstractions/XiangJiang.Windows.Abstractions.csproj
+++ b/XiangJiang.Windows.Abstractions/XiangJiang.Windows.Abstractions.csproj
@@ -14,6 +14,7 @@
     <PackageIcon>nugetico.png</PackageIcon>
     <AssemblyVersion>2.0.0.0</AssemblyVersion>
     <FileVersion>2.0.0.0</FileVersion>
+    <Version>2.0.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
